--- a/style.css
+++ b/style.css
@@ -33,10 +33,12 @@ html {
 body {
     /* background-image: url("background.png"); */
     margin: 0px;
-    min-height: 100%;
-    height: 100%;
+    min-height: 100vh;
+    height: 100vh;
     min-width: 100%;
     width: 100%;
+    display: flex;
+    flex-direction: column;
     background-image: linear-gradient(var(--bg-color-rgba), var(--bg-color-rgba)), url(background.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -146,8 +148,11 @@ body {
 }
 
 .social-media-container {
-    position: absolute;
-    bottom: 0px;
+    /* position: absolute; */
+    margin-top: auto;
+    align-items: center;
+    justify-content: center;
+    /* bottom: 0px; */
     width: 100%;
     text-align: center;
 }
