--- a/pages/contact/contact.css
+++ b/pages/contact/contact.css
@@ -16,8 +16,23 @@
 }
 
 body {
+    /* background-image: url("background.png"); */
     margin: 0px;
-    padding: 0px;
+    min-height: 100vh;
+    height: 100vh;
+    min-width: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    background-image: linear-gradient(var(--bg-color-rgba), var(--bg-color-rgba)), url(background.png);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
     font-family: 'NATS Regular', sans-serif;
     background-color: var(--bg-color);
     -webkit-touch-callout: none; /* iOS Safari */
@@ -26,7 +41,9 @@ body {
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* Internet Explorer/Edge */
     user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
+    overflow-y: visible;
 }
+
 
 .navbar {
     display: flex;
