--- a/src/pages/contact/contact.css
+++ b/src/pages/contact/contact.css
@@ -18,22 +18,36 @@
 
 body {
     margin: 0px;
-    padding: 0px;
+    min-height: 100vh;
+    height: 100vh;
+    min-width: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    background-image: linear-gradient(var(--bg-color-rgba), var(--bg-color-rgba)), url(../../background.png);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
     font-family: 'NATS Regular', sans-serif;
     background-color: var(--bg-color);
-    -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-    -khtml-user-select: none; /* Konqueror HTML */
-    -moz-user-select: none; /* Firefox */
-    -ms-user-select: none; /* Internet Explorer/Edge */
-    user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    overflow-y: visible;
 }
 
 .navbar {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--bg-color);
     color: var(--text-color);
     padding: 1rem 0rem 1rem 0rem;
 }
