--- a/src/style.css
+++ b/src/style.css
@@ -24,8 +24,8 @@
 
 html {
     margin: 0px;
-    min-height: 100%;
-    min-width: 100%;
+    min-height: 100vh;
+    min-width: 100vh;
     height: 100%;
     width: 100%;
 }
