--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@
 html {
     margin: 0px;
     min-height: 100vh;
-    min-width: 100vh;
-    height: 100%;
+    min-width: 100%;
+    height: 100vh;
     width: 100%;
 }
 
@@ -55,7 +55,8 @@ body {
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* Internet Explorer/Edge */
     user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
-    overflow-y: visible;
+    /* overflow-y: visible; */
+    overflow: visible;
 }
 
 .navbar {
