--- a/pages/about/about.css
+++ b/pages/about/about.css
@@ -19,8 +19,8 @@
 
 body {
     margin: 0px;
-    min-height: 100vh;
-    height: 100vh;
+    min-height: 100%;
+    height: 100%;
     min-width: 100%;
     width: 100%;
     display: flex;
@@ -89,9 +89,9 @@ body {
 }
 
 .about-text-container {
-    margin-top: 3rem;
+    margin-top: 2.25rem;
     color: white;
-    padding: 2.7rem;
+    padding: 3rem;
 }
 
 .about-text-container h1 {
@@ -101,7 +101,6 @@ body {
 #my-name {
     font-size: 1.7rem;
     line-height: 1.5;
-    /* padding: auto; */
 }
 
 #i-build {
