--- a/src/style.css
+++ b/src/style.css
@@ -22,6 +22,26 @@
     src: url(Sansation_Regular.ttf);
 }
 
+body::-webkit-scrollbar {
+    width: .5em;
+}
+
+body::-webkit-scrollbar-track {
+    margin-block: .5em;
+}
+
+body:hover::-webkit-scrollbar-thumb {
+    background-color: #8383836c;
+    border-radius: 2rem;
+    opacity: .1;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+    background-color: #b1b1b193;
+    border-radius: 2rem;
+    opacity: .1;
+}
+
 html {
     margin: 0px;
     min-height: 100vh;
