--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -35,6 +35,14 @@ body::-webkit-scrollbar-thumb:hover {
     border-radius: 2rem;
 }
 
+html {
+    margin: 0px;
+    min-height: 100vh;
+    min-width: 100%;
+    height: 100vh;
+    width: 100%;
+}
+
 body {
     margin: 0px;
     min-height: 100%;
