--- a/src/pages/contact/contact.css
+++ b/src/pages/contact/contact.css
@@ -45,15 +45,15 @@ body {
     width: 100%;
     display: flex;
     flex-direction: column;
-    background-image: linear-gradient(var(--bg-color-rgba), var(--bg-color-rgba)), url(../../background.png);
+    background-image: linear-gradient(var(--bg-color-rgba), var(--bg-color-rgba)), url(../../pics/background_blurred.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(4px);
+    /* backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px); */
     font-family: 'NATS Regular', sans-serif;
     background-color: var(--bg-color);
     -webkit-touch-callout: none;
